homework02/k8s/simple/04-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-app
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      name: user-service-app
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service-app
          image: axelli/user-service:1.0
          ports:
            - name: app
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: app
              path: /actuator/health/liveness
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
          readinessProbe:
              httpGet:
                port: app
                path: /actuator/health/readiness
              initialDelaySeconds: 5
              periodSeconds: 5
              timeoutSeconds: 3
