homework02/k8s/simple/06-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service-serv
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: app
      name: app
  type: NodePort
